@@ -1,4 +1,0 @@
-<div class="box">
-<div class="box-title">{$title}</div>
-<div class="box-content">{$content}</div>
-</div>
