@@ -1,5 +1,0 @@
-{atkscript file="atk/javascript/prototype/prototype.js" prefix=$atkroot}
-{atkscript file="atk/javascript/rico/rico.js" prefix=$atkroot}
-{atkscript file="javascript/page.js" prefix=$themedir}
-{atkloadscript code="pageonload();\n"}
-{$content}
