@@ -1,6 +1,0 @@
-<div id="box-top">
-  <div id="box-top-content">
-  <div id="box-top-title">{$title}</div>
-    {$content}    
-  </div>
-</div>
